--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -72,79 +72,81 @@
   <!-- Header End -->
 
   <!-- Jumbotron About -->
-<section id="tentang">
-    <div class="container">
-      <div class="row text-center mb-5">
-          <div class="col">
-              <h1 class="shadow pb-3 display-5 mb-4">Tentang</h1>
-              <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup1">
-                  <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup1"
-                      data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-                  <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
-              </button>
-              <div class="icon" data-aos="flip-left" data-aos-offset="210" data-aos-duration="2000">
-                  <a href="https://github.com/Andiw1" target="_blank" class="href text-black"><i class="bi bi-github p-4"></i></a>
-                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black"> <i class="bi bi-instagram p-4"></i></a>
+  <section id="tentang">
+      <div class="container">
+        <div class="row text-center mb-5">
+            <div class="col">
+                <h1 class="shadow pb-3 display-5 mb-4">Tentang</h1>
+                <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup1">
+                    <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+                        class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup1"
+                        data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                    <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
+                </button>
+                <!-- Medsos -->
+                <div class="icon" data-aos="flip-left" data-aos-offset="210" data-aos-duration="2000">
+                    <a href="https://github.com/Andiw1" target="_blank" class="href text-black"><i class="bi bi-github p-4"></i></a>
+                    <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black"> <i class="bi bi-instagram p-4"></i></a>
+                </div>
+                <!-- Medsos End -->
+            </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          <div class="col-md-6" data-aos="fade-right" data-aos-offset="230" data-aos-duration="2000">
+            <p>
+              Saya adalah seorang pelajar yang duduk dibangku kelas 12 TKJ di
+              SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web
+              Desaigner. Saya telah mepelajari keterampilan dan pengetahuan
+              dalam berbagai bahasa pemrograman basic frontend seperti HTML,
+              CSS, dan Bootstrap untuk mencapai tujuan karir saya.
+            </p>
+          </div>
+          <div class="col-md-6" data-aos="fade-left" data-aos-offset="230" data-aos-duration="2000" data-aos-delay="200">
+            <p>
+              Semua pengalaman dan pembelajaran ini telah membantu saya
+              mempersiapkan diri untuk masa depan yang sukses dalam bidang
+              Teknik Komputer dan Jaringan, serta karir sebagai Web Designer.
+              Saya berharap dapat terus mengembangkan keterampilan dan
+              pengetahuan saya dalam bidang ini dan berkontribusi positif dalam
+              industri teknologi informasi.
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <!-- Modal POP UP 1 -->
+      <div class="modal fade" id="popup1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                   <div class="modal-header">
+                      <h5 class="modal-title fs-5" id="exampleModalLabel">
+                      Data Diri - Andi Wicaksono
+                      </h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                      <!-- Isi data diri Anda di sini -->
+                      <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+                          class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                          data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                      <p>Nama: Andi Wicaksono</p>
+                      <p>Tanggal Lahir: 16 April 2006</p>
+                      <p>Sekolah: SMK N 3 Yogyakarta</p>
+                      <p><strong>D.I Yogyakarta<strong></p>
+                  </div>
+                  <div class="modal-footer">
+                  <p>"Kode adalah bahasa yang lebih kuat daripada kata-kata." - Derek Ralston</p>
+                  </div>     
               </div>
           </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center">
-        <div class="col-md-6" data-aos="fade-right" data-aos-offset="230" data-aos-duration="2000">
-          <p>
-            Saya adalah seorang pelajar yang duduk dibangku kelas 12 TKJ di
-            SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web
-            Desaigner. Saya telah mepelajari keterampilan dan pengetahuan
-            dalam berbagai bahasa pemrograman basic frontend seperti HTML,
-            CSS, dan Bootstrap untuk mencapai tujuan karir saya.
-          </p>
-        </div>
-        <div class="col-md-6" data-aos="fade-left" data-aos-offset="230" data-aos-duration="2000" data-aos-delay="200">
-          <p>
-            Semua pengalaman dan pembelajaran ini telah membantu saya
-            mempersiapkan diri untuk masa depan yang sukses dalam bidang
-            Teknik Komputer dan Jaringan, serta karir sebagai Web Designer.
-            Saya berharap dapat terus mengembangkan keterampilan dan
-            pengetahuan saya dalam bidang ini dan berkontribusi positif dalam
-            industri teknologi informasi.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal POP UP 1 -->
-    <div class="modal fade" id="popup1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                 <div class="modal-header">
-                    <h5 class="modal-title fs-5" id="exampleModalLabel">
-                    Data Diri - Andi Wicaksono
-                    </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <!-- Isi data diri Anda di sini -->
-                    <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-                        class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-                    <p>Nama: Andi Wicaksono</p>
-                    <p>Tanggal Lahir: 16 April 2006</p>
-                    <p>Sekolah: SMK N 3 Yogyakarta</p>
-                    <p><strong>D.I Yogyakarta<strong></p>
-                </div>
-                <div class="modal-footer">
-                <p>"Kode adalah bahasa yang lebih kuat daripada kata-kata." - Derek Ralston</p>
-                </div>     
-            </div>
-        </div>
-    </div>
-
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#868fba" fill-opacity="1"
-        d="M0,64L0,128L60,128L60,192L120,192L120,288L180,288L180,32L240,32L240,192L300,192L300,160L360,160L360,224L420,224L420,128L480,128L480,224L540,224L540,128L600,128L600,128L660,128L660,160L720,160L720,288L780,288L780,160L840,160L840,32L900,32L900,160L960,160L960,256L1020,256L1020,288L1080,288L1080,192L1140,192L1140,288L1200,288L1200,192L1260,192L1260,160L1320,160L1320,64L1380,64L1380,288L1440,288L1440,320L1380,320L1380,320L1320,320L1320,320L1260,320L1260,320L1200,320L1200,320L1140,320L1140,320L1080,320L1080,320L1020,320L1020,320L960,320L960,320L900,320L900,320L840,320L840,320L780,320L780,320L720,320L720,320L660,320L660,320L600,320L600,320L540,320L540,320L480,320L480,320L420,320L420,320L360,320L360,320L300,320L300,320L240,320L240,320L180,320L180,320L120,320L120,320L60,320L60,320L0,320L0,320Z">
-      </path>
-    </svg>
-  </section>
+  
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#868fba" fill-opacity="1"
+          d="M0,64L0,128L60,128L60,192L120,192L120,288L180,288L180,32L240,32L240,192L300,192L300,160L360,160L360,224L420,224L420,128L480,128L480,224L540,224L540,128L600,128L600,128L660,128L660,160L720,160L720,288L780,288L780,160L840,160L840,32L900,32L900,160L960,160L960,256L1020,256L1020,288L1080,288L1080,192L1140,192L1140,288L1200,288L1200,192L1260,192L1260,160L1320,160L1320,64L1380,64L1380,288L1440,288L1440,320L1380,320L1380,320L1320,320L1320,320L1260,320L1260,320L1200,320L1200,320L1140,320L1140,320L1080,320L1080,320L1020,320L1020,320L960,320L960,320L900,320L900,320L840,320L840,320L780,320L780,320L720,320L720,320L660,320L660,320L600,320L600,320L540,320L540,320L480,320L480,320L420,320L420,320L360,320L360,320L300,320L300,320L240,320L240,320L180,320L180,320L120,320L120,320L60,320L60,320L0,320L0,320Z">
+        </path>
+      </svg>
+    </section>
   <!-- JUmbotron About End-->
 
   <!-- Projects-->
