--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -85,8 +85,8 @@
                 </button>
                 <!-- Medsos -->
                 <div class="icon" data-aos="flip-left" data-aos-offset="210" data-aos-duration="2000">
-                    <a href="https://github.com/Andiw1" target="_blank" class="href text-black"><i class="bi bi-github p-4"></i></a>
-                    <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black"> <i class="bi bi-instagram p-4"></i></a>
+                    <a href="https://github.com/Andiw1" target="_blank" class="href text-black social-link"><i class="bi bi-github p-4"></i></a>
+                    <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black social-link"> <i class="bi bi-instagram p-4"></i></a>
                 </div>
                 <!-- Medsos End -->
             </div>
